--- a/index.html
+++ b/index.html
@@ -643,17 +643,7 @@
                <img src="./images/cta.png" alt="leaves img" class="hidden lg:block w-full h-full object-cover" />
             </div>
             <div
-               class="
-                  bg-hero bg-cover bg-center bg-no-repeat
-                  lg:bg-none
-                  text-white
-                  lg:text-[#1e252c]
-                  px-8
-                  py-16
-                  space-y-5
-                  lg:w-1/2 lg:pl-16
-                  xl:px-40
-               "
+               class="bg-safari lg:bg-none text-white lg:text-[#1e252c] px-8 py-16 space-y-5 lg:w-1/2 lg:pl-16 xl:px-40"
             >
                <h1 class="font-poppins font-semibold text-3xl">I care deeply for nature.</h1>
                <p class="robotomono leading-7">
